[package]
name = "todo_web_app"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] } 
rocket_cors = { version = "0.6.0", default-features = false }
mysql = "25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"

